tests/negative_tests/modules/repeatedModule2.sa
module repeatedModule2 where
    module M where
        x = True
    module M = M